	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
	* Core/UI split event loop code. (Scott Lamb)
	* Added improvements to the multi-field request code, including
	  required fields and account fields.
	* Moved more dialogs to the request API for interface consistency
	  (Send Message, Get User Info, and Insert Link dialogs)

	Bug Fixes:
	* You can now use :/ as a smiley safely (Nathan Owens)
	* Various buffer overflow fixes (Stefan Esser)
	* Tabs now stay green when they are supposed to (Etan Reisner)
	* Fixed a bug where only the first user in a chat room list was removed
	  sometimes when trying to remove a group of users (Tim Ringenbach)
	* Improved chat parting logic (Tim Ringenbach)
	* Yet Another IRC channel user duplication bugfix (Tim Ringenbach)
	* TCL Plugin API changed
	* The mobile icon on MSN users is now removed when the person disables
	  mobile paging (Stu Tomlinson)
	* Conversation placement by account now works correctly with both
	  chats and IMs, and takes the Combine Chats and IMs option into
	  consideration.
	* Minor tweaks to the list box in the multi-field request dialogs
	  so they work without a label and scrollbar (Pekka Riikonen)
	* The Disconnect dialog no longer raises and gains focus each time
	  a disconnected account is added (Ka-Hing Cheung)
	* Added new MSN error codes and fixed an incorrect one (Stu Tomlinson)
	* Gadu-Gadu might actually connect again (Ignacy Gawedzki)
	* Buddy pounces for an account are removed when the account is
	  deleted (Gary Kramlich)
	* Various bug and memory leak fixes (Gary Kramlich)

	Translations:
	* Catalan translation updated (Xan (DXpublica))
	* Chinese (Simplified) translation updated (Funda Wang)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* English (British) translation updated (Luke Ross (lukeross))
	* Hebrew translation had 1 character removed (Ambrose C. LI)
	* Russian translation updated (Alexandre Prokoudine)